# TuneTracker

./: .gitignore  Dockerfile  Dockerfile.analyze  README.md  docker-compose.yml  docker-demo.bat  docker-demo.sh  kafka-log4j.properties  pyproject.toml  zookeeper-log4j.properties
src/tunetracker/: __init__.py  analyze.py  main.py  producer.py  streaming.py
tests/: test_kafka_connection.py  test_producer.py  test_streaming_app.py
